# cs2610-final-platinum

./: pyproject.toml
_server/: .env.example  .gitignore
_server/_server/: settings.py  urls.py
_server/core/: admin.py  models.py  urls.py  views.py
_server/core/migrations/: 0001_initial.py
client/: package-lock.json  package.json
client/src/: App.css  App.jsx  colors.css  main.jsx  material.css
client/src/components/: AccountListItem.jsx  AccountListItem.module.css  AccountsList.jsx  AccountsList.module.css  ListWithBottomButtons.jsx  ListWithBottomButtons.module.css  Toolbar.jsx  Toolbar.module.css  TransactionListItem.jsx  TransactionListItem.module.css
client/src/pages/: Account.jsx  Account.module.css  Dashboard.jsx  Dashboard.module.css  NewAccount.jsx  NewAccount.module.css  NewTransaction.jsx  TransactionDetail.jsx
client/src/utils/: api.js  use_accounts.js  use_transactions.js  use_user.js
